# POD_RESOLVER

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  gse_pod_resolver.py  pod_resolver_web.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
